--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 <body>
     <p>ami experiment kore dekci</p>
     <img src="mohiuddin's pic.jpg" alt="">
+    <img src="Katherine_Langford_(2018).jpg" alt="">
 </body>
 </html>
